<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="180dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="0dp"
    android:orientation="vertical"
    android:padding="10dp"
    android:textAlignment="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_btn_white"
        android:padding="25dp"
        android:text="@string/welcome_message"
        android:textColor="@android:color/black"
        android:textAlignment="textStart"
        android:layout_marginBottom="20dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/white"
        android:padding="10dp"
        >
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/daftar_hadir"
                android:drawableTop="@drawable/ic_school"
                android:textColor="#083405"
                style="?buttonBarButtonStyle"
                android:background="@android:color/transparent"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/jadwal"
                android:drawableTop="@drawable/ic_calendar"
                android:textColor="#083405"
                style="?buttonBarButtonStyle"
                android:background="@android:color/transparent"/>
    </LinearLayout>
    </LinearLayout>