<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="50dp"
    tools:context=".ui.home.HomeFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/profile_container"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:orientation="vertical"
                android:weightSum="3"
                android:background="@drawable/bg_rounded">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@string/logo"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/logo_tut" />
                    <TextView
                        android:id="@+id/lblUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/username"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        app:layout_constraintHorizontal_bias="0.166"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/imageView"/>

                    <TextView
                        android:id="@+id/lblNip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="50dp"
                        android:text="@string/nip"
                        android:textAlignment="center"
                        app:layout_constraintTop_toBottomOf="@id/lblUsername"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintHorizontal_bias="0.166"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
            <include layout="@layout/menu_home" />
        </RelativeLayout>
</ScrollView>